add nav list styling

--- a/main.css
+++ b/main.css
@@ -1,8 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100&display=swap');
 
 * {
-    margin: 0;
-    padding: 0;
+
 }
 
 body {
@@ -11,4 +10,11 @@ body {
 
 header, footer {
     background-color: #1F2937;
+}
+
+.nav-list {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    list-style: none;
 }
