--- a/main.css
+++ b/main.css
@@ -1,20 +1,67 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,100&display=swap');
 
 * {
-
-}
-
-body {
     font-family: 'Roboto', 'sans-serif';
-}
-
-header, footer {
-    background-color: #1F2937;
-}
-
-.nav-list {
-    display: flex;
     margin: 0;
     padding: 0;
     list-style: none;
+}
+a {
+    text-decoration: none;
+}
+.top {
+    background-color: #1F2937;
+    padding-bottom: 150px;
+}
+.nav-section {
+    display: flex;
+    justify-content: space-around;
+    gap: 24px;
+}
+.logo {
+    font-size: 24px;
+    color: #F9FAF8;
+}
+
+.nav-items {
+    display: flex;
+    gap: 1rem;
+}
+.nav-items a {
+    display: flex;
+    justify-self: center;
+    font-size: 18px;
+    color: #E5E7EB;
+}
+
+.hero {
+    display: flex;
+    padding: 8px;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.hero-text {
+    max-width: 350px;
+    display: flex;
+    flex-direction: column;
+}
+.hero-text-main {
+    font-size: 48px;
+    font-weight: bolder;
+    color: #F9FAF8;
+}
+
+.hero-text-secondary {
+    color:#E5E7EB
+}
+
+.hero-image {
+    display: flex;
+    background-image: url('https://images.pexels.com/photos/5479610/pexels-photo-5479610.jpeg');
+    background-size: cover;
+    background-repeat: no-repeat;
+    min-height: 100px;
+    min-width: 100px;
+    padding: 50px;
 }
