--- a/main.css
+++ b/main.css
@@ -21,23 +21,24 @@ a {
 .logo {
     font-size: 24px;
     color: #F9FAF8;
+    display: flex;
+    align-items: left;
+    padding-right: 115px;
 }
 
 .nav-items {
     display: flex;
     gap: 1rem;
+    padding-bottom: 50px;
 }
 .nav-items a {
-    display: flex;
-    justify-self: center;
     font-size: 18px;
     color: #E5E7EB;
 }
 
 .hero {
     display: flex;
-    padding: 8px;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
 }
 
@@ -45,23 +46,35 @@ a {
     max-width: 350px;
     display: flex;
     flex-direction: column;
+    flex-wrap: wrap;
+    align-items: left;
+    gap: 12px;
 }
 .hero-text-main {
     font-size: 48px;
     font-weight: bolder;
     color: #F9FAF8;
+    display: flex;
 }
 
 .hero-text-secondary {
     color:#E5E7EB
 }
 
+.hero-button button {
+    background-color: #3882F6;
+    color:#F9FAF8;
+    font-size: 18px;
+    font-family: 'Roboto', 'sans-serif';
+    padding: 8px 30px;
+    border-radius: 12px;
+    border: none;
+}
 .hero-image {
     display: flex;
     background-image: url('https://images.pexels.com/photos/5479610/pexels-photo-5479610.jpeg');
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 100px;
-    min-width: 100px;
-    padding: 50px;
+    min-height: 250px;
+    min-width: 250px;
 }
