--- a/main.css
+++ b/main.css
@@ -6,18 +6,23 @@
     padding: 0;
     list-style: none;
 }
+
 a {
     text-decoration: none;
 }
+
 .top {
     background-color: #1F2937;
     padding-bottom: 150px;
 }
+
 .nav-section {
     display: flex;
     justify-content: space-around;
     gap: 24px;
+    padding-top: 20px;
 }
+
 .logo {
     font-size: 24px;
     color: #F9FAF8;
@@ -31,6 +36,7 @@ a {
     gap: 1rem;
     padding-bottom: 50px;
 }
+
 .nav-items a {
     font-size: 18px;
     color: #E5E7EB;
@@ -50,6 +56,7 @@ a {
     align-items: left;
     gap: 12px;
 }
+
 .hero-text-main {
     font-size: 48px;
     font-weight: bolder;
@@ -70,6 +77,7 @@ a {
     border-radius: 12px;
     border: none;
 }
+
 .hero-image {
     display: flex;
     background-image: url('https://images.pexels.com/photos/5479610/pexels-photo-5479610.jpeg');
@@ -77,4 +85,25 @@ a {
     background-repeat: no-repeat;
     min-height: 250px;
     min-width: 250px;
+}
+
+.info-grid {
+    display: flex;
+    gap: 20px;
+    justify-content: center;
+}
+
+.info-images {
+    display: flex;
+    justify-content: space-evenly;
+    padding-left: 20px;
+    padding-right: 20px;
+    border-style: solid;
+    border-color: #3882F6;
+    border-radius: 12px;
+}
+
+main h1 {
+    text-align: center;
+    padding: 30px;
 }
