--- a/main.css
+++ b/main.css
@@ -150,7 +150,10 @@ main h1 {
     border-radius: 6px;
     color:#F9FAF8;
     display: flex;
-    gap: 16px;
+    gap: 150px;
+    align-items: flex-end;
+    padding-left: 75px;
+    padding-right: 75px;
 }
 .cta-button button {
     background-color: #3882F6;
@@ -163,6 +166,9 @@ main h1 {
 .cta-container {
     display: flex;
     justify-content: center;
+}
+.cta-text-one {
+    font-weight: bold;
 }
 footer {
     background-color: #1F2937;
